--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-        <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-                    <title>My Resume</title>
-                        <Center><h1 style="margin-bottom: 5px;">Jefferson Rosario</h1></Center>
-                        <Center><h5 style="margin-top: 5px;">Driving Growth, Igniting Innovation, and Amplifying Success</h5></Center>
-                        
-        </head>
-    <body>
-    <h3>My Objective</h3>
-        <P>I aim to contribute to the growth and success of an organization by utilizing my diverse skill set and expertise. I am dedicated to achieving exceptional results and exceeding organizational goals.</P>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Resume</title>
+<img src="Jefferson Rosario\Jeff_IDPIC_.jpg" alt="a 2 by2 I.D> picture of Jefferson Rosario" width="200" height="200" align="right">
+<Center><h1 style="margin-bottom: 5px;">Jefferson Rosario</h1></Center>
+<Center><h5 style="margin-top: 5px;">Driving Growth, Igniting Innovation, and Amplifying Success</h5></Center>
+</head>
+<body>
+        <h3>My Objective</h3>
+        <P>I aim to contribute to the growth and success of an organization by utilizing my diverse skill set and expertise.<br>I am dedicated to achieving exceptional results and exceeding organizational goals.</P>
 
     <h3>Education</h3>
         <ul>
