--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <img src="" alt="a 2 by 2 I.D. picture of Jefferson Rosario" width="200" height="200" align="right">
+                <img src="./Jeff_IDPIC.jpeg" alt="a 2 by 2 I.D. picture of Jefferson Rosario" width="200" height="200" align="right">
                     <title>My Resume</title>
                         <Center><h1 style="margin-bottom: 5px;">Jefferson Rosario</h1></Center>
                         <Center><h5 style="margin-top: 5px;">Driving Growth, Igniting Innovation, and Amplifying Success</h5></Center>
