fixed issues on tagging -m

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <img src="../Capstone-Project-1/Jeff_IDPIC_.jpg" alt="a 2 by 2 I.D. picture of Jefferson Rosario" width="200" height="200" align="right">
+                <img src="./Jeff_IDPIC_.jpg" alt="a 2 by 2 I.D. picture of Jefferson Rosario" width="200" height="200" align="right">
                     <title>My Resume</title>
                         <Center><h1 style="margin-bottom: 5px;">Jefferson Rosario</h1></Center>
                         <Center><h5 style="margin-top: 5px;">Driving Growth, Igniting Innovation, and Amplifying Success</h5></Center>
@@ -63,7 +63,7 @@
             <br><br>
             <li>Cold Calling: The First Seven Seconds</li>Issued October 2023 by LinkedIn Learning<br><a href="https://media.licdn.com/dms/image/D5622AQHjihxPn7BZDg/feedshare-shrink_1280/0/1698224266869?e=2147483647&v=beta&t=VlK5ctFNdYn655eDrWH4H8wIhbWqDX-e_OdTAi0uxC0">Show credential</a><br>Skills: Cold Calling, Prospecting, Leads Generation
             <br><br>
-            <li>Sales: Closing Strategies</li>Issued October 2023 by LinkedIn Learning<br><a href="https://media.licdn.com/dms/image/D5622AQF43vsoD2Kllw/feedshare-shrink_1280/0/1687322226597?e=1705536000&v=beta&t=w1qHLEhPZxpdLY7Barm530W2tnpODTnK0lH5AonHSDE">Show credential</a>Skills: Sales Strategy, Sales Effectiveness
+            <li>Sales: Closing Strategies</li>Issued October 2023 by LinkedIn Learning<br><a href="https://media.licdn.com/dms/image/D5622AQF43vsoD2Kllw/feedshare-shrink_1280/0/1687322226597?e=1705536000&v=beta&t=w1qHLEhPZxpdLY7Barm530W2tnpODTnK0lH5AonHSDE">Show credential</a><br>Skills: Sales Strategy, Sales Effectiveness
             <br><br>
             <li>Salesforce Certified CPQ Specialist Certification</li>Issued Aug 2022 by Zendesk<br>Skills: Salesforce, Quote Creation, CPQ
             <br><br>
@@ -73,7 +73,7 @@
             <br><br>
             <li>Business Growth Excellence</li>Issued April 2018 by ServiceSource<br>Skills: Customer Experience Management, People Management, Client Relations, Presentation, Critical Thinking, Problem Solving
             <br><br>
-    <h3><a href="Contact info.html">Contact Info</a>
+    <h3><a href="./Contact Info">Contact Info</a>
         
         </ul>
 
