--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <br><br>
             <li>Business Growth Excellence</li>Issued April 2018 by ServiceSource<br>Skills: Customer Experience Management, People Management, Client Relations, Presentation, Critical Thinking, Problem Solving
             <br><br>
-    <h3><a href="./Contact Info">Contact Info</a>
+    <h3>Contact Info</h3>
         
         </ul>
 
