--- a/index.html
+++ b/index.html
@@ -9,7 +9,69 @@
                         <Center><h5 style="margin-top: 5px;">Driving Growth, Igniting Innovation, and Amplifying Success</h5></Center>
                         
         </head>
-    <body>
+    <body> {
+  background-color: #eaf2f8;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.section {
+  margin-bottom: 30px;
+}
+
+.section h2 {
+  color: #0099cc;
+}
+
+.section p {
+  margin-bottom: 10px;
+}
+
+.section ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.section ul li {
+  margin-bottom: 5px;
+}
+
+.section ul li:before {
+  content: "•";
+  margin-right: 5px;
+  color: #0099cc;
+}
+
+.section .highlight {
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.section .highlight p {
+  margin-bottom: 0;
+}
+
+.section .highlight h3 {
+  margin-bottom: 10px;
+}
+
+.section .highlight ul {
+  margin-left: 20px;
+}
+
+.section .highlight ul li:before {
+  content: "▸";
+  margin-right: 5px;
+  color: #0099cc;
+}
     <h3>My Objective</h3>
         <P>I aim to contribute to the growth and success of an organization by utilizing my diverse skill set and expertise. I am dedicated to achieving exceptional results and exceeding organizational goals.</P>
 
