--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <img src="./jeff.jpg" alt="a 2 by 2 I.D. picture of Jefferson Rosario" width="200" height="200" align="right">
+                <img src="./jeff.jpg" alt="a 2 by 2 I.D. picture of Jefferson Rosario" width="200" height="200" align="center">
                     <title>My Resume</title>
                         <Center><h1 style="margin-bottom: 5px;">Jefferson Rosario</h1></Center>
                         <Center><h5 style="margin-top: 5px;">Driving Growth, Igniting Innovation, and Amplifying Success</h5></Center>
-                <link rel="style" href="./style.css">
                         
         </head>
-    <body> 
-    <link rel="style" href="./style.css">
+    <body> 
     <h3>My Objective</h3>
         <P>I aim to contribute to the growth and success of an organization by utilizing my diverse skill set and expertise. I am dedicated to achieving exceptional results and exceeding organizational goals.</P>
 
