--- a/Contact Info.html
+++ b/Contact Info.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Info</title>
-
+    <link href="style.css" rel="stylesheet" />
+    
 </head>
 <body>
     <h1>Contact Information</h1><br>
