--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p>I am dedicated to achieving exceptional results and exceeding organizational goals.</P>
     </center>
 
-    <Center><h3>Training and Education</h3></Center>
+      <h3>Training and Education</h3>
         <ul>
             <li>Certified in Web Development<br>UDEMY - December 2023</li>
             <br>
@@ -37,17 +37,11 @@
             <br>
         </ul>
 
-    <center><h3>Work Experience</h3></Center>
+    <h3>Work Experience</h3>
         <ul>
-<<<<<<< HEAD
             <li>Sales Consultant (Customer Account Management) at <a href=https://www.axiomint.com>Axiom</a></li>August 2023 - November 2023 (3 Months)<br>- I successfully closed deals. The smallest was a $450 deal, paid annualy, and the biggest started at $10,000 to a maximum of $50,000 for a special programming request. I leveraged my sales expertise to secure these agreements and contribute to the company's growth.<br><br>
 
             <li>Business Development Manager at <a href=https://emapta.com/careers-in-the-philippines>Emapta Global</a></li>February 2023 - July 2023 (4 Months)<br>- I successfully established and nurtured few client relationships, resulting in a mderate increase in business opportunities and revenue for the company. I believe that my proactive approach and effective communication skills, specially during trainings, played a pivotal role in driving growth and expanding the client base during my tenure.<br><br>
-=======
-            <li>As a Sales Consultant (Customer Account Management) at <a href=https://www.axiomint.com>Axiom</a></li>August 2023 - December 2023 (4 Months)<br>- I successfully closed deals. The smallest was a $450 deal, paid annualy, and the biggest started at $10,000 to a maximum of $50,000 for a special programming request. I leveraged my sales expertise to secure these agreements and contribute to the company's growth.<br><br>
-
-            <li>As a Business Development Manager at <a href=https://emapta.com/careers-in-the-philippines>Emapta Global</a></li>February 2023 - July 2023 (4 Months)<br>- I successfully established and nurtured few client relationships, resulting in a mderate increase in business opportunities and revenue for the company. I believe that my proactive approach and effective communication skills, specially during trainings, played a pivotal role in driving growth and expanding the client base during my tenure.<br><br>
->>>>>>> 937e12098132ca413b4c1a13badf520971252e3a
             
             <li>Renewals Manager at <a href=https://www.zendesk.com>Zendesk, Inc.</a></li>July 2021 - January  2023 (18 months)<br>- I actively contributed as a team player, collaborating with my colleagues to consistently achieve the quarterly goals set for our team. While our goals were focused on collective success, individual incentives were also implemented based on manager-driven factors such as absenteeism rate and forecast accuracy rate.<br><br>
 
@@ -85,11 +79,6 @@
             <br><br>
             <li>Business Growth Excellence</li>Issued April 2018 by ServiceSource<br>Skills: Customer Experience Management, People Management, Client Relations, Presentation, Critical Thinking, Problem Solving
             <br><br>
-<<<<<<< HEAD
-=======
-    <h3><a href="Contact Info">Contact Info</a></h3>
-        
->>>>>>> 937e12098132ca413b4c1a13badf520971252e3a
         </ul>
 
         <center>
