--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <br>
         </ul>
     
-    <center><h3>Licenses & Certifications</h3></center>
+    <h3>Licenses & Certifications</h3>
         <ul>
             <li>Website Development</li>Issued December 2023 by UDEMY<br>Show credential<br>
             Skills: HTML, CSS, Javascript, Node, React, PostgreSQL, Web3 and DApps
